# Adwaita64

./: README.md  com.github.WryOpussum.Adwaita64.json  meson.build
data/: com.github.WryOpussum.Adwaita64.appdata.xml.in  com.github.WryOpussum.Adwaita64.desktop.in  com.github.WryOpussum.Adwaita64.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: add_repo.blp  add_repo_window.py  adwaita64.gresource.xml  adwaita64.in  compile_repo.py  main.py  meson.build  models.py  window.blp  window.py  window.ui
